updated Home screen and our products screen

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
