added product details screen

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "react-zoom-slider": "^0.1.0",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "web-vitals": "^2.1.4"
