--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
