--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm install --legacy-peer-deps || true"
+    "eject": "react-scripts eject"
+    // "postinstall": "npm install --legacy-peer-deps || true"
   },
   "eslintConfig": {
     "extends": [
